issue 3 form and validation

--- a/src/locales/ru/index.json
+++ b/src/locales/ru/index.json
@@ -1,5 +1,9 @@
 {
-    "components": {},
+    "components": {
+        "form": {
+            "submit": "Submit"
+        }
+    },
     "routes": {
         "main": {
             "hello": "Привет, дно! Я Main страница."
