--- a/src/locales/ru/index.json
+++ b/src/locales/ru/index.json
@@ -60,6 +60,9 @@
                         "comment": "Комментарий"
                     }
                 }
+            },
+            "files": {
+                "header": "Файлы"
             }
         },
         "specialists": {
