--- a/src/locales/ru/index.json
+++ b/src/locales/ru/index.json
@@ -63,6 +63,17 @@
             },
             "files": {
                 "header": "Файлы"
+            },
+            "certificates": {
+                "header": "Сертификаты",
+                "label": {
+                    "issued": "Выдан",
+                    "specialty": "Специальность",
+                    "power": "Степень",
+                    "number": "Номер",
+                    "competencies": "Компетенции",
+                    "description": "Описание"
+                }
             }
         },
         "specialists": {
