--- a/src/locales/en/index.json
+++ b/src/locales/en/index.json
@@ -7,6 +7,9 @@
         "person": {
             "files": {
                 "header": "Files"
+            },
+            "certificates": {
+                "header": "Certificates"
             }
         }
     },
