SC-12 specialists filter

--- a/src/locales/ru/index.json
+++ b/src/locales/ru/index.json
@@ -156,7 +156,8 @@
                     "buttons": {
                         "append": "Добавить сертификат",
                         "save": "Сохранить",
-                        "cancel": "Отмена"
+                        "cancel": "Отмена",
+                        "done": "Готово"
                     }
                 },
                 "confirm": {
