--- a/src/locales/ru/index.json
+++ b/src/locales/ru/index.json
@@ -22,6 +22,31 @@
             "input-file": {
                 "add": "Добавить файл"
             }
+        },
+        "checkbox-tree": {
+            "search": "Поиск",
+            "experience": "Указать опыт"
+        },
+        "pdf": {
+            "project": {
+                "name": "Название проекта не указано",
+                "main-info": "Основная информация",
+                "empty": "Не указано",
+                "req-empty": "Название проектного запроса не указано",
+                "sector": "Отрасль",
+                "project": "Проект",
+                "manager": "Ресурсный менеджер",
+                "recruiter": "Отв. рекрутер",
+                "type": "Тип запроса",
+                "description": "Описание",
+                "customer": "Заказчик",
+                "time": "Сроки проекта",
+                "long": "Продолжительность проекта",
+                "reqs": "Требования",
+                "competencies": "Навыки",
+                "exp": "Опыт",
+                "rate": "Ставка"
+            }
         }
     },
     "routes": {
@@ -426,6 +451,10 @@
         "project-request-list": {
             "title": "Список проектных запросов",
             "requests": {
+                "actions": {
+                    "edit": "Редактировать",
+                    "delete": "Удалить"
+                },
                 "empty": "Список запросов пуст",
                 "request-item": {
                     "title": "Название проектного запроса не указано",
@@ -525,6 +554,24 @@
                 "submit": "Создать запрос",
                 "required-error": "Обязательно для заполнения"
             },
+            "customer": {
+                "title": "Заказчик",
+                "edit": "Редактировать",
+                "list": {
+                    "customer": "Заказчик",
+                    "comment": "Комментарий"
+                },
+                "form": {
+                    "name": {
+                        "title": "Заказчик",
+                        "placeholder": "Введите название заказчика"
+                    },
+                    "description": {
+                        "title": "Описание",
+                        "placeholder": "Введите описание"
+                    }
+                }
+            },
             "requirements": {
                 "edit-modal": {
                     "header_competence": "Компетенции",
@@ -542,12 +589,15 @@
                     "position": "Начните вводить, например, “Front-end Dev”",
                     "title-field": "Название проекта",
                     "add-request": "Добавить требование"
-                },
-                "edit-role": {
-                    "search": "Поиск"
                 }
             },
             "blocks": {
+                "header": {
+                    "controls": {
+                        "edit": "Редактировать",
+                        "delete": "Удалить"
+                    }
+                },
                 "empty-title": "Название проектного запроса не\u00A0указано",
                 "empty-field": "Не\u00A0указано",
                 "people_0": "человек",
@@ -625,6 +675,13 @@
                     "header":"Основные данные",
                     "cancel": "Отмена",
                     "save": "Сохранить"
+                },
+                "confirm-modal": {
+                    "header": "Точно удалить?",
+                    "text": "Будет удалён запрос: {{name}}",
+                    "empty-name": "Имя запроса не указано",
+                    "cancel": "Отмена",
+                    "delete": "Удалить"
                 },
                 "tabs": {
                     "main": "Основное",
