SC-12 competence fix

--- a/src/locales/ru/index.json
+++ b/src/locales/ru/index.json
@@ -127,6 +127,10 @@
                     }
                 },
                 "competencies": {
+                    "controls": {
+                        "edit": "Редактировать",
+                        "delete": "Удалить"
+                    },
                     "title": "Компетенции",
                     "empty": "Нет связанных компетенций",
                     "role": "Роль",
