SC-12 add specialist

--- a/src/locales/ru/index.json
+++ b/src/locales/ru/index.json
@@ -390,6 +390,12 @@
                 "linked": {
                     "title": "Связанные кандидаты",
                     "why": "Почему связаны?"
+                },
+                "projects": {
+                    "add": "Добавить кандидата в проект",
+                    "empty-name": "Название проекта не указано",
+                    "requirement-empty": "Нет доступных требований",
+                    "requirement-no-name": "Название требования не указано"
                 }
             },
             "sidebar": {
