--- a/src/locales/ru/index.json
+++ b/src/locales/ru/index.json
@@ -68,6 +68,7 @@
             "hello": "SkillCloud"
         },
         "person": {
+            "add-specialist": "Добавить в проект",
             "links": {
                 "base-info": {
                     "title": "Основная информация",
