--- a/src/locales/ru/index.json
+++ b/src/locales/ru/index.json
@@ -153,7 +153,8 @@
                             "close": "Свернуть все",
                             "append": "Добавить роль",
                             "save": "Сохранить",
-                            "cancel": "Отмена"
+                            "cancel": "Отмена",
+                            "done": " Готово"
                         }
                     }
                 }
