--- a/src/locales/ru/index.json
+++ b/src/locales/ru/index.json
@@ -25,7 +25,14 @@
         },
         "checkbox-tree": {
             "search": "Поиск",
-            "experience": "Указать опыт"
+            "experience": {
+                "title": "Указать опыт",
+                "invariant": "Опыт не\u00A0указан",
+                "invariant_1": "Менее года",
+                "invariant_3": "1-3 года",
+                "invariant_5": "3-5 лет",
+                "invariant_100": "Более 5 лет"
+            }
         },
         "pdf": {
             "project": {
